app/assets/stylesheets/components/_survey_question.scss
.survey-question-panel {
  display: flex;
  flex-direction: column;
  padding: 3rem 2rem 2rem;
  border-radius: 1rem;
  box-shadow: $content-box-shadow;
  margin: 1rem;
  min-width: -moz-available;
}

.survey_survey_questions_answer, .survey_photo {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  margin: 1rem 0 1rem;
}

.radio {
  background: white;
  padding: .5rem 1rem;
  border-radius: .5rem;
  label {
    display: flex;
    gap: 1rem;
  }
}

.survey-image-container {
  position: relative;
  height: 17rem;
  width: 100%;
  margin: 1rem 0 1rem;
  display: flex;
  justify-content: center;
}

.survey-image {
  position: absolute;
  width: 10rem;
  align-self: center;
  border-radius: 0.6rem;
  transition: .4s;
  z-index: 1;
}

.image-grow {
  transform: scale(2);
}

.survey-photo-label {
  i {
    font-size: 1rem;
  }
}

.result-panel {
  align-items: center;
}

.result-avatar {
  aspect-ratio: 1/1;
  width: 20rem;
}

@media screen and (max-width: 749px) {
  .survey-question-panel {
    margin: 0;
  }

  .survey-photo-label {
    i {
      font-size: .7rem;
    }
  }
}

